feat: 使用netty构建了简单暂时的websocket服务，增加了restapi的实现骨架。